<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_278sdp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_21sdp"
    android:layout_marginStart="@dimen/_16sdp"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_heding"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvHowToUse"
            style="@style/TextStyle12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_flashlightworks"
            android:layout_marginTop="@dimen/_11sdp"
            android:textAlignment="textStart"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_headingOne"
            style="@style/TextStyle13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/text_translation"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHowToUse" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/disOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_headingOne">
            <TextView
                android:id="@+id/tvDiscOne"
                style="@style/TextStyle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/type_or_paste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/disTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            app:layout_constraintTop_toBottomOf="@+id/disOne">

            <TextView
                android:id="@+id/tvDiscTwo"
                style="@style/TextStyle13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextStyle14"
            android:id="@+id/tvDis"
            android:layout_marginTop="@dimen/_21sdp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/_minus2sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/embark_on_your_journey_with_precision_and_style_let_gold_compasspro_be_your_trusted_guide_to_every_destination"
            app:layout_constraintTop_toBottomOf="@+id/disTwo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvManageDataPref"
        style="@style/TextStyle_poppins_semibold_17"
        android:layout_width="@dimen/_219sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/start_btn_bg"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/manage_data_preferences"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_heding" />
</androidx.constraintlayout.widget.ConstraintLayout>