<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/round_corner_cardview_bg"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cancel_button" />

        <TextView
            android:id="@+id/tvtvv"
            style="@style/TextStyle15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btn_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/tvtvv">

            <TextView
                android:id="@+id/btn_continue"
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="@string/deposit_amount"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_principle"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="1000"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btn_deposit">

            <TextView
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="@string/rate_of_interest"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_interest"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="10%"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_years"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btn_interest">

            <TextView
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="@string/no_of_years"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_years"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="10"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btn_years">

            <TextView
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="@string/frequency"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_frequency"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/yearly"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_gross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btn_frequency">

            <TextView
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="Gross Amount:"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_gross_amount"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="1211"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_gain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btn_gross">

            <TextView
                style="@style/TextStyle9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="start"
                android:text="Interest earned:"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


            <TextView
                android:id="@+id/tv_gain"
                style="@style/TextStyle11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center|start"
                android:paddingStart="@dimen/_10sdp"
                android:text="1211"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_ok"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/start_btn_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gain">

            <TextView
                style="@style/TextStyle4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_43sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:text="Ok"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>