<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_background"
    android:forceDarkAllowed="false"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingBottom="@dimen/_30sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/iv_card_close"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cancel_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_select_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_28sdp"
        android:clickable="false"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/select_language"
        android:textColor="#2C2C2C"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:background="@drawable/strock_background_language"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_lang">

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/english"
            android:textColor="#2C2C2C"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/im_check_english"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_13sdp"
            android:clickable="false"
            android:src="@drawable/baseline_search_24"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_hindi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/strock_background_language"
        android:orientation="vertical"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/ll_english">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/im_check_hindi"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_13sdp"
            android:clickable="false"
            android:src="@drawable/baseline_search_24"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/hindi"
            android:textColor="#2C2C2C"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>